--- a/MUSIC/instructors.html
+++ b/MUSIC/instructors.html
@@ -36,18 +36,32 @@
 
     <!-- Use the main area to add the main content to the webpage -->
     <main>
-      <p>Welcome to Strike a Chord. We are a local music store, specializing
-        in lessons and rental equipment. Our mission is to provide world-class
-        instruction with each music lesson.</p>
 
-      <p>We provide lessons for several musical instruments, including
-        piano, guitar, bass, and violin. Your first two lessons are FREE.
-        Contact us today to get started!</p>
+      <p class="title1">Meet our professional and talented instructors.</p>
 
+      <aside class="grid">
 
-        <div>
+        <figure>
+          <img src="images/guitar-instructor.jpg" alt="guitar instructor">
+          <figcaption>Jack Williams, Guitar</figcaption>
+        </figure>
 
-        </div>
+        <figure>
+          <img src="images/electric-guitar-instructor.jpg" alt="electric guitar instructor">
+          <figcaption>Jose Ramirez, Guitar</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/piano-instructor.jpg" alt="piano instructor">
+          <figcaption>Elisa Petrov, Piano</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/violin-instructor.jpg" alt="violin instructor">
+          <figcaption>Maya Hill, Violin</figcaption>
+        </figure>
+
+      </aside>
 
     </main>
 
@@ -62,6 +76,6 @@
 
 <!--
 Student Name: Andrew Perel
-File Name: index.html
-Date: 2/8/2024
+File Name: instructors.html
+Date: 3/31/2024
 -->
