--- a/MUSIC/lessons.html
+++ b/MUSIC/lessons.html
@@ -11,6 +11,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/
+    favicon-32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-
+    touch-icon.png">
+    <link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
 
     <title>Strike a Chord: Home Page</title>
 
@@ -39,7 +45,7 @@
         Contact us today to get started!</p>
 
 
-        <div id="info">
+        <section id="info">
            <h2>Private Lessons</h2>
            <p>We make learning music fun! We offer private lessons for piano,
              guitar, and violin. Contact us today to schedule your first lesson
@@ -52,9 +58,9 @@
            <li>Spring and Winter Performances</li>
            <li>Summer Camps</li>
            </ul>
-        </div>
+        </section>
 
-        <div id="piano">
+        <section id="piano">
            <h3>Piano Lessons</h3>
            <img src="images/piano-lesson.jpg" alt="piano teacher and student
            sitting at a piano" class="round">
@@ -63,9 +69,9 @@
             we have a program to suit your needs. Learn new techniques, theory,
             harmony, and tone. Learning how to play the piano helps develop hand
             eye coordination and self-confidence.</p>
-        </div>
+        </section>
 
-        <div id="guitar">
+        <section id="guitar">
           <h3>Guitar Lessons</h3>
           <img src="images/child-guitar.jpg" alt="child with a smile holding a
           guitar" class="round">
@@ -74,9 +80,9 @@
           and advanced players. Improve your skills with weekly lessons. Learn
           new tips and techniques from experienced instructors. We also have a
           rock band program that you can join!</p>
-        </div>
+        </section>
 
-        <div id="violin">
+        <section id="violin">
            <h3>Violin Lessons</h3>
            <img src="images/woman-violin.jpg" alt="woman playing the violin" class="round">
             <p>We offer violin lessons for all ages, beginning at age six. Our
@@ -84,7 +90,7 @@
             classical. Our instructors will help you fine-tune techniques and
             accomplish your musical goals. We work with you to create a customized
             program, tailored to your needs.</p>
-        </div>
+        </section>
 
     </main>
 
