--- a/RESCUE/template.html
+++ b/RESCUE/template.html
@@ -9,15 +9,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/
+    favicon-32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-
+    touch-icon.png">
+    <link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
 
-    <title>Wild Rescues: Home</title>
+    <title>Wild Rescues: Template</title>
 
     <header>
       <div class="tab-desk">
-        <a href="index.html">
-          <img src="images/baby-hawk.jpg" alt="rescued baby hawk">
-        </a>
+        <a href="index.html"></a>
       </div>
+
+      <img src="images/baby-hawk.jpg" alt="rescued baby hawk">
 
       <div class="mobile">
         <h1>&#128062; Wild Rescues</h1>
@@ -44,17 +50,6 @@
       <div>
 
       </div>
-
-      <p>Welcome to Wild Rescues. Our mission is to rescue, rehabilitate,
-      and release wildlife back into their natural environment. We are a nonprofit organization dedicated to helping injured wildlife.</p>
-
-      <p>Our staff provides around-the-clock care for wildlife in need. We
-      also provide long-term care for wildlife that cannot be released back
-      into their natural environment.</p>
-
-      <p>Will you partner with us? We need caring volunteers to help care
-      for our animals. You can also donate, become a member, or become a
-      sponsor. Contact us today.</p>
 
     </main>
 
